[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Puente Entero.gd" type="Script" id=1]
[ext_resource path="res://Sprites/puente.png" type="Texture" id=2]
[ext_resource path="res://Sprites/explosiones.png" type="Texture" id=3]
[ext_resource path="res://BGM-SFX/Super C SFX (12).wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 25.41, 7.3711 )

[sub_resource type="Animation" id=2]

resource_name = "explosion"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 28.8387, 38.5 )

[node name="Puente Entero" type="Node"]

script = ExtResource( 1 )

[node name="Puente" type="StaticBody2D" parent="." index="0" groups=[
"puente",
"suelo",
]]

editor/display_folded = true
position = Vector2( 955.593, 122.948 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Puente" index="0"]

scale = Vector2( 1.16406, 1.35484 )
texture = ExtResource( 2 )
hframes = 3
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puente" index="1"]

position = Vector2( -0.5, -12.5 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Puente" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/explosion = SubResource( 2 )
blend_times = [  ]

[node name="Puente2" type="StaticBody2D" parent="." index="1" groups=[
"puente",
"suelo",
]]

editor/display_folded = true
position = Vector2( 1004.59, 122.948 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Puente2" index="0"]

scale = Vector2( 1.16406, 1.35484 )
texture = ExtResource( 2 )
hframes = 3
frame = 1
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puente2" index="1"]

position = Vector2( -0.5, -12.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Puente2" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/explosion = SubResource( 3 )
blend_times = [  ]

[node name="Puente3" type="StaticBody2D" parent="." index="2" groups=[
"puente",
"suelo",
]]

editor/display_folded = true
position = Vector2( 1054.59, 122.948 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Puente3" index="0"]

scale = Vector2( 1.16406, 1.35484 )
texture = ExtResource( 2 )
hframes = 3
frame = 2
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puente3" index="1"]

position = Vector2( -0.5, -12.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Puente3" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/explosion = SubResource( 4 )
blend_times = [  ]

[node name="AreaExplosion" type="Area2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 960, 112 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaExplosion" index="0"]

position = Vector2( -2, -7 )
shape = SubResource( 5 )
disabled = true

[node name="AreaExplosion2" type="Area2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 1017.5, 112 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaExplosion2" index="0"]

position = Vector2( -2, -7 )
shape = SubResource( 5 )
disabled = true

[node name="AreaExplosion3" type="Area2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 1054.5, 112 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaExplosion3" index="0"]

position = Vector2( -2, -7 )
shape = SubResource( 5 )
disabled = true

[node name="explosion" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="AreaExplosion" to="." method="_on_AreaExplosion_body_entered"]

[connection signal="body_entered" from="AreaExplosion2" to="." method="_on_AreaExplosion2_body_entered"]

[connection signal="body_entered" from="AreaExplosion3" to="." method="_on_AreaExplosion3_body_entered"]


